force-app/main/default/objects/Account/fields/Specialized_industry__c.field-meta.xml
<CustomField>
    <fullName>Specialized_industry__c</fullName>
    <label>Specialized industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquirers</fullName>
            </value>
            <value>
                <fullName>ATM Networks</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>BNPL</fullName>
            </value>
            <value>
                <fullName>Delivery Platform</fullName>
            </value>
            <value>
                <fullName>Fintech and Lending</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Neobanks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Service Provider</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Telecoms</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Wallets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>