force-app/main/default/objects/Account/fields/Specific_Industry__c.field-meta.xml
<CustomField>
    <fullName>Specific_Industry__c</fullName>
    <label>ZoomInfo Industry</label>
    <length>200</length>
    <type>Text</type>
</CustomField>