force-app/main/default/objects/Account/fields/Status_of_the_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Status_of_the_Implementation__c</fullName>
    <label>Status of the Implementation:</label>
    <type>TextArea</type>
</CustomField>