force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>Please add the Client´s local Tax ID (I.E. NIT, RFC, CPF, QUIT, RUC, RUT, EIN)</description>
    <externalId>true</externalId>
    <inlineHelpText>Please add the Client´s local Tax ID (I.E. NIT, RFC, CPF, QUIT, RUC, RUT, EIN)</inlineHelpText>
    <label>Tax ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>