force-app/main/default/objects/Account/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <description>Amenazas externas</description>
    <label>Threats</label>
    <type>TextArea</type>
</CustomField>