force-app/main/default/objects/Account/fields/Ticker__c.field-meta.xml
<CustomField>
    <fullName>Ticker__c</fullName>
    <label>Ticker</label>
    <type>TextArea</type>
</CustomField>