force-app/main/default/objects/Account/fields/Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding__c</fullName>
    <description>Total Funding Historical</description>
    <label>Total Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>