force-app/main/default/objects/Account/fields/Types_of_products_they_sell__c.field-meta.xml
<CustomField>
    <fullName>Types_of_products_they_sell__c</fullName>
    <label>Types of products they sell</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>