force-app/main/default/objects/Account/fields/Types_of_technology_partner_sells__c.field-meta.xml
<CustomField>
    <fullName>Types_of_technology_partner_sells__c</fullName>
    <label>Types of technology partner sells</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
            <value>
                <fullName>SAAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>