force-app/main/default/objects/Account/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <formula>IF( ISPICKVAL(Industry, &apos;Banks&apos;), &apos;Banks&apos;,
IF( ISPICKVAL(Industry, &apos;Neobanks&apos;), &apos;Banks&apos;,
IF( ISPICKVAL(Industry, &apos;Acquirers&apos;), &apos;Payments&apos;,
IF( ISPICKVAL(Industry, &apos;ATM Networks&apos;), &apos;Payments&apos;,
IF( ISPICKVAL(Industry, &apos;BNPL&apos;), &apos;Payments&apos;,
IF( ISPICKVAL(Industry, &apos;Fintech and Lending&apos;), &apos;Payments&apos;,
IF( ISPICKVAL(Industry, &apos;Payment Service Provider&apos;), &apos;Payments&apos;,
IF( ISPICKVAL(Industry, &apos;Wallets&apos;), &apos;Payments&apos;,
IF( ISPICKVAL(Industry, &apos;Delivery Program&apos;), &apos;Retail&apos;,
IF( ISPICKVAL(Industry, &apos;Food &amp; Beverage&apos;), &apos;Retail&apos;,
IF( ISPICKVAL(Industry, &apos;Marketplace&apos;), &apos;Retail&apos;,
IF( ISPICKVAL(Industry, &apos;Retail&apos;), &apos;Retail&apos;,
TEXT(Industry)
))))))))))))</formula>
    <label>IVA Vertical</label>
    <type>Text</type>
</CustomField>