force-app/main/default/objects/Account/fields/What_do_they_expect_for_Simetrik__c.field-meta.xml
<CustomField>
    <fullName>What_do_they_expect_for_Simetrik__c</fullName>
    <label>What do they expect for Simetrik?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>