force-app/main/default/objects/Account/fields/What_information_do_they_require_from_us__c.field-meta.xml
<CustomField>
    <fullName>What_information_do_they_require_from_us__c</fullName>
    <label>What information do they require from us</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>