force-app/main/default/objects/Account/fields/What_services__c.field-meta.xml
<CustomField>
    <fullName>What_services__c</fullName>
    <inlineHelpText>What services, trained implementers? Other services?</inlineHelpText>
    <label>What services?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>