force-app/main/default/objects/Account/fields/Which_competitors__c.field-meta.xml
<CustomField>
    <fullName>Which_competitors__c</fullName>
    <label>Which  competitors?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>