force-app/main/default/objects/Account/fields/Which_Ones__c.field-meta.xml
<CustomField>
    <fullName>Which_Ones__c</fullName>
    <label>Which Ones</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>