force-app/main/default/objects/Account/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <defaultValue>TEXT(2010)</defaultValue>
    <inlineHelpText>Year the company was founded</inlineHelpText>
    <label>Year Founded</label>
    <length>4</length>
    <type>Text</type>
</CustomField>