force-app/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>false</active>
    <label>Customer</label>
</RecordType>