force-app/main/default/objects/Account/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>false</active>
    <label>Prospect</label>
</RecordType>