force-app/main/default/objects/Account/validationRules/Customer_Account_No_CSM.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Account_No_CSM</fullName>
    <active>true</active>
    <description>Can&apos;t save a Customer Account without a CSM noted in the CSM field</description>
    <errorConditionFormula>AND( ISPICKVAL( Type , &quot;Customer&quot;) ,
     ISBLANK(Customer_Success_Manager__c )
)</errorConditionFormula>
    <errorMessage>Please add a CSM to save an Account with a &quot;Customer&quot; type</errorMessage>
</ValidationRule>