force-app/main/default/objects/Account/validationRules/Discovery.validationRule-meta.xml
<ValidationRule>
    <fullName>Discovery</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(TEXT(Account_Status__c) = &quot;Partnership Definition&quot;),
(OR(
NDA_signed_and_attached__c = FALSE,
ISBLANK(Region__c)
))
)</errorConditionFormula>
    <errorMessage>You must complete the fields (NDA signed and attached) and (Region)</errorMessage>
</ValidationRule>