force-app/main/default/objects/Account/validationRules/Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Account_Status__c , &quot;Lost&quot;),
    ISPICKVAL( Reason_for_lost__c , &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>You must choose one reason for lost</errorMessage>
</ValidationRule>