force-app/main/default/objects/Account/validationRules/Partnership_Definition.validationRule-meta.xml
<ValidationRule>
    <fullName>Partnership_Definition</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
(TEXT ( Account_Status__c) = &quot;Redlining&quot;),
OR(
ISBLANK(TEXT( Partner_Type__c )),
NOT( Business_case_approved__c )
)
)</errorConditionFormula>
    <errorMessage>You must complete the fields (Partner Type) and (Business case approved)</errorMessage>
</ValidationRule>