force-app/main/default/objects/Account/validationRules/Prospecting.validationRule-meta.xml
<ValidationRule>
    <fullName>Prospecting</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName  = &quot;Partner&quot;,
(TEXT ( Account_Status__c) = &quot;Discovery&quot;),
OR(
ISBLANK(Discovery_meeting_date__c),
Counter__c  = 0,
ISBLANK (Counter__c)
)
)</errorConditionFormula>
    <errorMessage>You must create at least one contact and choose a Discovery meeting date</errorMessage>
</ValidationRule>