force-app/main/default/objects/Account/validationRules/Redlining.validationRule-meta.xml
<ValidationRule>
    <fullName>Redlining</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(Account_Status__c) = &quot;Active&quot;,
    TEXT(Type) = &quot;Partner&quot;,
    OR(
        NOT(Partner_registration_form__c),
        NOT(Security_information__c),
        NOT(Due_diligence_Approved__c)
    )
)</errorConditionFormula>
    <errorMessage>You must complete the fields (Partner registration form), (Security Information) and (Due diligence approved)</errorMessage>
</ValidationRule>