force-app/main/default/objects/Account/validationRules/Rejected_Cause.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Cause</fullName>
    <active>true</active>
    <description>Validates that a rejection cause is registered for partner accounts that are not accepted in the program</description>
    <errorConditionFormula>AND( ISPICKVAL( Account_Status__c , &quot;Refused&quot;) ,  ISBLANK(  TEXT( Rejection_Reason__c )  ))</errorConditionFormula>
    <errorMessage>You must register a rejection reason to be able to move the partner account to Refused status</errorMessage>
</ValidationRule>