force-app/main/default/objects/Account/listViews/Clients.listView-meta.xml
<ListView>
    <fullName>Clients</fullName>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Juancho</value>
    </filters>
    <label>Clients</label>
</ListView>