force-app/main/default/objects/Account/listViews/Partners.listView-meta.xml
<ListView>
    <fullName>Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Partner_Type__c</columns>
    <columns>Number_of_Clients__c</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner</value>
    </filters>
    <label>Partners</label>
</ListView>