force-app/main/default/objects/Account/listViews/Success_View.listView-meta.xml
<ListView>
    <fullName>Success_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Success_Manager__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Country__c</columns>
    <columns>Customer_ARR_ACV__c</columns>
    <columns>Global_Region__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Project_Manager__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>Success View</label>
</ListView>