force-app/main/default/objects/Account/listViews/Todas_las_cuentas.listView-meta.xml
<ListView>
    <fullName>Todas_las_cuentas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>Metabase_ID__c</columns>
    <columns>Installed_Base__c</columns>
    <columns>Account_Type__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>